src/test/deca/context/invalid/decl_var_already_declared_in_method.deca
// Test la règle 3.17: déclaration d'une variable déjà existante dans la 
// méthode de la même classe

class A {

    int x = 12;
    void simpleMethod(){
        int x = 5;
    }

}

// Resultat:
// TODOTEST
